NVIDIA Texture Tools version 2.0.4
 * Fix error in RGB format output; reported by jonsoh. See issue 49.
 * Added support RGB format dithering by jonsoh. Fixes issue 50 and 51.
 * Prevent infinite loop in indexMirror when width equal 1. Fixes issue 65.

NVIDIA Texture Tools version 2.0.3
 * More accurate DXT3 compressor. Fixes issue 38.
 * Remove legacy compressors. Fix issue 34.
 * Check for single color in all compressors. Fixes issue 43.
 * Fix error in fast downsample filter, reported by Noel Llopis.

NVIDIA Texture Tools version 2.0.2
 * Fix copy ctor error reported by Richard Sim.
 * Fix indexMirror error reported by Chris Lambert.
 * Fix vc8 post build command, reported by Richard Sim.
 * Fix RGBA modes with less than 32 bpp by Viktor Linder.
 * Fix alpha decompression by Amorilia. See issue 40.
 * Avoid default-initialized constructors for POD types, reported by Jim Tilander.
 * Add single color compresor for DXT1a.
 * Set swizzle code to ATI2 files. See issue 41.

NVIDIA Texture Tools version 2.0.1
 * Fix memory leaks.
 * Pre-allocate device memory for CUDA compressor.
 * Add single color compressor. Thanks to Amir Ebrahimi.
 * Better CUDA error checking.

NVIDIA Texture Tools version 2.0.0
 * Fixed PSNR formula in nvimgdiff.
 * Added support for arbitrary RGB formats.
 * Add support for DXT1a. Solves issue 1.
 * Refactor and improve compression quality of fast compressors.
 * Add cmake scripts to detect processor and chose compiler options.
 * Fix normal map decompression.
 * Evaluate angular deviation error for normal maps in nvimgdiff.
 * Fix DXT1 compression with custom color metrics.
 * Fix error in normal map generation from heightmap mipmaps.
 * Fix errors in estimateSize.
 * Fix errors when maxLevel is used.
 * Enable the use of BC5 not just for normal maps.
 * Add mirror wrapping mode, use by default.
 * Implement polyphase filters. Solves issue 3.
 * Add box and triangle filter sampling.
 * Refactor nvtt public interface.